--- a/PyLearn7-Assignment37/w3schools machine learning exercises/percentiles.ipynb
+++ b/PyLearn7-Assignment37/w3schools machine learning exercises/percentiles.ipynb
@@ -2,11 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy"
+    "# Percentiles are used in statistics to give you a number that describes the value that \n",
+    "# a given percent of the values are lower than."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the 75. percentile? The answer is 43, meaning that 75% of the people are 43 or younger.\n",
+    "\n",
+    "import numpy\n",
+    "\n",
+    "ages = [5,31,43,48,50,41,7,11,15,39,80,82,32,2,8,6,25,36,27,61,31]\n",
+    "x = numpy.percentile(ages, 75)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the age that 90% of the people are younger than?\n",
+    "\n",
+    "ages = [5,31,43,48,50,41,7,11,15,39,80,82,32,2,8,6,25,36,27,61,31]\n",
+    "x = numpy.percentile(ages, 90)\n",
+    "print(x)"
    ]
   }
  ],
