--- a/PyLearn7-Assignment37/w3schools machine learning exercises/13_confusion_matrix.ipynb
+++ b/PyLearn7-Assignment37/w3schools machine learning exercises/13_confusion_matrix.ipynb
@@ -180,6 +180,28 @@
     "Precision = metrics.precision_score(actual, predicted)\n",
     "print(Precision)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sensitivity (Recall)\n",
+    "# Of all the positive cases, what percentage are predicted positive?\n",
+    "\n",
+    "# Sensitivity (sometimes called Recall) measures how good the model is at predicting positives.\n",
+    "\n",
+    "# This means it looks at true positives and false negatives (which are positives that have been incorrectly predicted as negative).\n",
+    "\n",
+    "# How to Calculate\n",
+    "# True Positive / (True Positive + False Negative)\n",
+    "\n",
+    "# Sensitivity is good at understanding how well the model predicts something is positive:\n",
+    "\n",
+    "# Example\n",
+    "Sensitivity_recall = metrics.recall_score(actual, predicted)"
+   ]
   }
  ],
  "metadata": {
