--- a/PyLearn7-Assignment37/w3schools machine learning exercises/13_confusion_matrix.ipynb
+++ b/PyLearn7-Assignment37/w3schools machine learning exercises/13_confusion_matrix.ipynb
@@ -183,24 +183,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9079685746352413\n"
+     ]
+    }
+   ],
    "source": [
-    "# Sensitivity (Recall)\n",
+    "# Sensitivity (Recall):\n",
     "# Of all the positive cases, what percentage are predicted positive?\n",
     "\n",
     "# Sensitivity (sometimes called Recall) measures how good the model is at predicting positives.\n",
     "\n",
-    "# This means it looks at true positives and false negatives (which are positives that have been incorrectly predicted as negative).\n",
+    "# This means it looks at true positives and false negatives (which are positives that have been \n",
+    "# incorrectly predicted as negative).\n",
     "\n",
-    "# How to Calculate\n",
+    "# How to Calculate:\n",
     "# True Positive / (True Positive + False Negative)\n",
     "\n",
     "# Sensitivity is good at understanding how well the model predicts something is positive:\n",
     "\n",
-    "# Example\n",
-    "Sensitivity_recall = metrics.recall_score(actual, predicted)"
+    "# Example:\n",
+    "Sensitivity_recall = metrics.recall_score(actual, predicted)\n",
+    "print(Sensitivity_recall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.11009174311926606\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Specificity:\n",
+    "# How well the model is at prediciting negative results?\n",
+    "\n",
+    "# Specificity is similar to sensitivity, but looks at it from the persepctive of negative results.\n",
+    "\n",
+    "# How to Calculate:\n",
+    "# True Negative / (True Negative + False Positive)\n",
+    "\n",
+    "# Since it is just the opposite of Recall, we use the recall_score function, taking the opposite\n",
+    "#  position label:\n",
+    "\n",
+    "# Example:\n",
+    "Specificity = metrics.recall_score(actual, predicted, pos_label=0)\n",
+    "print(Specificity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9003895381190874\n"
+     ]
+    }
+   ],
+   "source": [
+    "# F-score:\n",
+    "# F-score is the \"harmonic mean\" of precision and sensitivity.\n",
+    "\n",
+    "# It considers both false positive and false negative cases and is good for imbalanced datasets.\n",
+    "\n",
+    "# How to Calculate:\n",
+    "# 2 * ((Precision * Sensitivity) / (Precision + Sensitivity))\n",
+    "\n",
+    "# This score does not take into consideration the True Negative values:\n",
+    "\n",
+    "# Example:\n",
+    "F1_score = metrics.f1_score(actual, predicted)\n",
+    "print(F1_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Accuracy': 0.821, 'Precision': 0.8929359823399559, 'Sensitivity_recall': 0.9079685746352413, 'Specificity': 0.11009174311926606, 'F1_score': 0.9003895381190874}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# All calulations in one:\n",
+    "\n",
+    "#metrics\n",
+    "print({\"Accuracy\":Accuracy,\"Precision\":Precision,\"Sensitivity_recall\":Sensitivity_recall,\"Specificity\":Specificity,\"F1_score\":F1_score})"
    ]
   }
  ],
