--- a/PyLearn7-Assignment37/w3schools machine learning exercises/17_categorical_data.ipynb
+++ b/PyLearn7-Assignment37/w3schools machine learning exercises/17_categorical_data.ipynb
@@ -73,6 +73,111 @@
     "cars = pd.read_csv('data.csv')\n",
     "print(cars.to_string())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In the multiple regression chapter, we tried to predict the CO2 emitted based on the volume of the\n",
+    "#  engine and the weight of the car but we excluded information about the car brand and model.\n",
+    "\n",
+    "# The information about the car brand or the car model might help us make a better prediction of the \n",
+    "# CO2 emitted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# One Hot Encoding:\n",
+    "# We cannot make use of the Car or Model column in our data since they are not numeric. \n",
+    "# A linear relationship between a categorical variable, Car or Model, and a numeric variable, \n",
+    "# CO2, cannot be determined.\n",
+    "\n",
+    "# To fix this issue, we must have a numeric representation of the categorical variable. One way to\n",
+    "# do this is to have a column representing each group in the category.\n",
+    "\n",
+    "# For each column, the values will be 1 or 0 where 1 represents the inclusion of the group and 0\n",
+    "# represents the exclusion. This transformation is called one hot encoding.\n",
+    "\n",
+    "# You do not have to do this manually, the Python Pandas module has a function that called \n",
+    "# get_dummies() which does one hot encoding."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Car_Audi  Car_BMW  Car_Fiat  Car_Ford  Car_Honda  Car_Hundai  Car_Hyundai  Car_Mazda  Car_Mercedes  Car_Mini  Car_Mitsubishi  Car_Opel  Car_Skoda  Car_Suzuki  Car_Toyoty  Car_VW  Car_Volvo\n",
+      "0      False    False     False     False      False       False        False      False         False     False           False     False      False       False        True   False      False\n",
+      "1      False    False     False     False      False       False        False      False         False     False            True     False      False       False       False   False      False\n",
+      "2      False    False     False     False      False       False        False      False         False     False           False     False       True       False       False   False      False\n",
+      "3      False    False      True     False      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "4      False    False     False     False      False       False        False      False         False      True           False     False      False       False       False   False      False\n",
+      "5      False    False     False     False      False       False        False      False         False     False           False     False      False       False       False    True      False\n",
+      "6      False    False     False     False      False       False        False      False         False     False           False     False       True       False       False   False      False\n",
+      "7      False    False     False     False      False       False        False      False          True     False           False     False      False       False       False   False      False\n",
+      "8      False    False     False      True      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "9       True    False     False     False      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "10     False    False     False     False      False       False         True      False         False     False           False     False      False       False       False   False      False\n",
+      "11     False    False     False     False      False       False        False      False         False     False           False     False      False        True       False   False      False\n",
+      "12     False    False     False      True      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "13     False    False     False     False       True       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "14     False    False     False     False      False        True        False      False         False     False           False     False      False       False       False   False      False\n",
+      "15     False    False     False     False      False       False        False      False         False     False           False      True      False       False       False   False      False\n",
+      "16     False     True     False     False      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "17     False    False     False     False      False       False        False       True         False     False           False     False      False       False       False   False      False\n",
+      "18     False    False     False     False      False       False        False      False         False     False           False     False       True       False       False   False      False\n",
+      "19     False    False     False      True      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "20     False    False     False      True      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "21     False    False     False     False      False       False        False      False         False     False           False      True      False       False       False   False      False\n",
+      "22     False    False     False     False      False       False        False      False          True     False           False     False      False       False       False   False      False\n",
+      "23     False    False     False     False      False       False        False      False         False     False           False     False       True       False       False   False      False\n",
+      "24     False    False     False     False      False       False        False      False         False     False           False     False      False       False       False   False       True\n",
+      "25     False    False     False     False      False       False        False      False          True     False           False     False      False       False       False   False      False\n",
+      "26      True    False     False     False      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "27      True    False     False     False      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "28     False    False     False     False      False       False        False      False         False     False           False     False      False       False       False   False       True\n",
+      "29     False     True     False     False      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "30     False    False     False     False      False       False        False      False          True     False           False     False      False       False       False   False      False\n",
+      "31     False    False     False     False      False       False        False      False         False     False           False     False      False       False       False   False       True\n",
+      "32     False    False     False      True      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "33     False     True     False     False      False       False        False      False         False     False           False     False      False       False       False   False      False\n",
+      "34     False    False     False     False      False       False        False      False         False     False           False      True      False       False       False   False      False\n",
+      "35     False    False     False     False      False       False        False      False          True     False           False     False      False       False       False   False      False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example:\n",
+    "# One Hot Encode the Car column:\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "cars = pd.read_csv('data.csv')\n",
+    "ohe_cars = pd.get_dummies(cars[['Car']])\n",
+    "\n",
+    "print(ohe_cars.to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Results:\n",
+    "# A column was created for every car brand in the Car column."
+   ]
   }
  ],
  "metadata": {
