--- a/PyLearn7-Assignment37/w3schools machine learning exercises/17_categorical_data.ipynb
+++ b/PyLearn7-Assignment37/w3schools machine learning exercises/17_categorical_data.ipynb
@@ -178,6 +178,112 @@
     "# Results:\n",
     "# A column was created for every car brand in the Car column."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict CO2:\n",
+    "# We can use this additional information alongside the volume and weight to predict CO2\n",
+    "\n",
+    "# To combine the information, we can use the concat() function from pandas.\n",
+    "\n",
+    "# First we will need to import a couple modules.\n",
+    "\n",
+    "# We will start with importing the Pandas.\n",
+    "\n",
+    "import pandas\n",
+    "\n",
+    "# The pandas module allows us to read csv files and manipulate DataFrame objects:\n",
+    "\n",
+    "cars = pandas.read_csv(\"data.csv\")\n",
+    "\n",
+    "# It also allows us to create the dummy variables:\n",
+    "\n",
+    "ohe_cars = pandas.get_dummies(cars[['Car']])\n",
+    "\n",
+    "# Then we must select the independent variables (X) and add the dummy variables columnwise.\n",
+    "\n",
+    "# Also store the dependent variable in y.\n",
+    "\n",
+    "X = pandas.concat([cars[['Volume', 'Weight']], ohe_cars], axis=1)\n",
+    "y = cars['CO2']\n",
+    "\n",
+    "# We also need to import a method from sklearn to create a linear model\n",
+    "\n",
+    "# Learn about linear regression.\n",
+    "\n",
+    "from sklearn import linear_model\n",
+    "\n",
+    "# Now we can fit the data to a linear regression:\n",
+    "\n",
+    "regr = linear_model.LinearRegression()\n",
+    "regr.fit(X,y)\n",
+    "\n",
+    "# Finally we can predict the CO2 emissions based on the car's weight, volume, and manufacturer.\n",
+    "\n",
+    "## predict the CO2 emission of a Volvo where the weight is 2300kg, and the volume is 1300cm3:\n",
+    "predictedCO2 = regr.predict([[2300, 1300,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[122.45153299]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Program Files\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example:\n",
+    "import pandas\n",
+    "from sklearn import linear_model\n",
+    "\n",
+    "cars = pandas.read_csv(\"data.csv\")\n",
+    "ohe_cars = pandas.get_dummies(cars[['Car']])\n",
+    "\n",
+    "X = pandas.concat([cars[['Volume', 'Weight']], ohe_cars], axis=1)\n",
+    "y = cars['CO2']\n",
+    "\n",
+    "regr = linear_model.LinearRegression()\n",
+    "regr.fit(X,y)\n",
+    "\n",
+    "##predict the CO2 emission of a Volvo where the weight is 2300kg, and the volume is 1300cm3:\n",
+    "predictedCO2 = regr.predict([[2300, 1300,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0]])\n",
+    "\n",
+    "print(predictedCO2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We now have a coefficient for the volume, the weight, and each car brand in the data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
