--- a/PyLearn7-Assignment37/w3schools machine learning exercises/17_categorical_data.ipynb
+++ b/PyLearn7-Assignment37/w3schools machine learning exercises/17_categorical_data.ipynb
@@ -283,7 +283,114 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Dummifying:\n",
+    "# It is not necessary to create one column for each group in your category. The information can be\n",
+    "#  retained using 1 column less than the number of groups you have.\n",
+    "\n",
+    "# For example, you have a column representing colors and in that column, you have two colors, red and blue."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  color\n",
+      "0  blue\n",
+      "1   red\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example:\n",
+    "import pandas as pd\n",
+    "\n",
+    "colors = pd.DataFrame({'color': ['blue', 'red']})\n",
+    "\n",
+    "print(colors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can create 1 column called red where 1 represents red and 0 represents not red, which means it is blue.\n",
+    "\n",
+    "# To do this, we can use the same function that we used for one hot encoding, get_dummies, and then \n",
+    "# drop one of the columns. There is an argument, drop_first, which allows us to exclude the first \n",
+    "# column from the resulting table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   color_red\n",
+      "0      False\n",
+      "1       True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example:\n",
+    "import pandas as pd\n",
+    "\n",
+    "colors = pd.DataFrame({'color': ['blue', 'red']})\n",
+    "dummies = pd.get_dummies(colors, drop_first=True)\n",
+    "\n",
+    "print(dummies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What if you have more than 2 groups? How can the multiple groups be represented by 1 less column?\n",
+    "\n",
+    "# Let's say we have three colors this time, red, blue and green. When we get_dummies while dropping \n",
+    "# the first column, we get the following table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   color_green  color_red  color\n",
+      "0        False      False   blue\n",
+      "1        False       True    red\n",
+      "2         True      False  green\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example:\n",
+    "import pandas as pd\n",
+    "\n",
+    "colors = pd.DataFrame({'color': ['blue', 'red', 'green']})\n",
+    "dummies = pd.get_dummies(colors, drop_first=True)\n",
+    "dummies['color'] = colors['color']\n",
+    "\n",
+    "print(dummies)"
+   ]
   }
  ],
  "metadata": {
