--- a/PyLearn7-Assignment38/California cities/california_cities.ipynb
+++ b/PyLearn7-Assignment38/California cities/california_cities.ipynb
@@ -2,19 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -167,19 +155,31 @@
        "4          19.766         19.763           0.003                0.01  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "cities = pd.read_csv(\"california_cities.csv\")\n",
     "cities.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extracting the data we ar interested in\n",
+    "latitude, longitude = cities[\"latd\"], cities[\"longd\"]\n",
+    "population, area = cities[\"population_total\"], cities[\"area_total_km2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -195,10 +195,12 @@
    ],
    "source": [
     "# to scatter the points, using size and color but without label\n",
-    "\n",
-    "\n",
-    "plt.scatter(cities[\"longd\"], cities[\"latd\"], label=None, c=np.log10(cities[\"population_total\"]),\n",
-    "            cmap='gist_ncar', s=cities[\"area_total_km2\"], linewidth=0, alpha=0.5)\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn\n",
+    "seaborn.set()\n",
+    "plt.scatter(longitude, latitude, label=None, c=np.log10(population),\n",
+    "            cmap='gist_ncar', s=area, linewidth=0, alpha=0.5)\n",
     "# plt.axis(aspect='equal')\n",
     "plt.xlabel('Longitude')\n",
     "plt.ylabel('Longitude')\n",
