--- a/PyLearn7-Assignment38/California cities/california_cities.ipynb
+++ b/PyLearn7-Assignment38/California cities/california_cities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4          19.766         19.763           0.003                0.01  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +211,7 @@
     "    plt.scatter([], [], c='k', alpha=0.3, s=area, label=str(area) + 'km$^2$')\n",
     "plt.legend(scatterpoints=1, frameon=False, labelspacing=1, title='City Areas')\n",
     "plt.title(\"Area and Population of California Cities\")\n",
+    "plt.savefig(\"california_cities.jpg\")\n",
     "plt.show()"
    ]
   }
