7th commit/readme added

--- a/PyLearn7-Assignment39/online retail/online_retail.ipynb
+++ b/PyLearn7-Assignment39/online retail/online_retail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "9  12/1/2010 8:34       1.69     13047.0  United Kingdom  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "12            201112   433668.010"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -356,13 +356,13 @@
     "plt.xlabel(\"year & month\")\n",
     "plt.ylabel(\"revenue\")\n",
     "plt.title(\"Monthly revenue\")\n",
-    "plt.savefig(\"pics/1.jpg\")\n",
+    "plt.savefig(\"output/1.jpg\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "4            201104  493207.121      -0.278163"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -495,13 +495,13 @@
     "plt.xlabel(\"year & month\")\n",
     "plt.ylabel(\"growth rate\")\n",
     "plt.title(\"Monthly growth rate\")\n",
-    "plt.savefig(\"pics/2.jpg\")\n",
+    "plt.savefig(\"output/2.jpg\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
        "12            201112         617"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -655,13 +655,13 @@
     "plt.xlabel(\"year & month\")\n",
     "plt.ylabel(\"number of customers\")\n",
     "plt.title(\"Monthly active customers\")\n",
-    "plt.savefig(\"pics/3.jpg\")\n",
+    "plt.savefig(\"output/3.jpg\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "12            201112    199907"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -812,13 +812,13 @@
     "plt.xlabel(\"year & month\")\n",
     "plt.ylabel(\"number of orders\")\n",
     "plt.title(\"Monthly total number of orders\")\n",
-    "plt.savefig(\"pics/4.jpg\")\n",
+    "plt.savefig(\"output/4.jpg\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "12            201112  16.247406"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -969,13 +969,13 @@
     "plt.xlabel(\"year & month\")\n",
     "plt.ylabel(\"average of revenue per order\")\n",
     "plt.title(\"Monthly average revenue per order\")\n",
-    "plt.savefig(\"pics/5.jpg\")\n",
+    "plt.savefig(\"output/5.jpg\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
        "4            201012    20.34 2010-12-01 08:26:00                201012  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
        "22            201111       New  117153.750"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -1390,13 +1390,13 @@
     "plt.xlabel(\"year & month\")\n",
     "plt.ylabel(\"revenue\")\n",
     "plt.title(\"Revenue per month for new (blue) and existing (orange) customers\")\n",
-    "plt.savefig(\"pics/6.jpg\")\n",
+    "plt.savefig(\"output/6.jpg\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
        "12            201112    0.058319"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1556,13 +1556,13 @@
     "plt.xlabel(\"year & month\")\n",
     "plt.ylabel(\"ratio\")\n",
     "plt.title(\"New customer ratio\")\n",
-    "plt.savefig(\"pics/7.jpg\")\n",
+    "plt.savefig(\"output/7.jpg\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1733,7 @@
        "4                      0       0       0       1       1       0       1  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1877,7 @@
        "10            201112             617                402       0.651540"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1926,13 +1926,13 @@
     "plt.xlabel(\"year & month\")\n",
     "plt.ylabel(\"retention rate\")\n",
     "plt.title(\"Monthly retention rate\")\n",
-    "plt.savefig(\"pics/8.jpg\")\n",
+    "plt.savefig(\"output/8.jpg\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -2241,7 +2241,7 @@
        "201112               NaN     NaN     NaN     NaN     NaN     NaN    1.00  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2285,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
