--- a/PyLearn7-Assignment39/digikala online shop statistics/digikala.ipynb
+++ b/PyLearn7-Assignment39/digikala online shop statistics/digikala.ipynb
@@ -370,7 +370,6 @@
    "source": [
     "data['Orders'] = data['ID_Order']\n",
     "data_1 = data.groupby(['OrderYearMonth'])['Orders'].count().reset_index()\n",
-    "\n",
     "data_1"
    ]
   },
@@ -588,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -607,6 +606,7 @@
     "\n",
     "plt.figure(figsize=(12, 12))\n",
     "plt.pie(result['ID_Customer'], labels=persian_labels, autopct='%1.1f%%')\n",
+    "plt.savefig(\"output/2.jpg\")\n",
     "plt.show()"
    ]
   }
